# cerebras-chatgpt-cli

./: CODING_GUIDELINES.md  IMPLEMENTATION_COMPLETE.md  PRD.md  QUICK_START.md  README.md  README_NEW.md  config.py  hello.txt  pyproject.toml  requirements.txt  setup.py  test_char_delay.py  test_main.py  validate_implementation.py
cerebras_cli/: __init__.py  __main__.py  exceptions.py
cerebras_cli/cli/: __init__.py  commands.py  main.py  repl.py
cerebras_cli/core/: __init__.py  client.py  config.py
cerebras_cli/plugins/: __init__.py  base.py  example_plugin.py  git_plugin.py  manager.py
cerebras_cli/tools/: __init__.py  base.py  code_tools.py  file_edit.py  file_tools.py  git_tools.py  shell_tools.py  token_analytics.py
docs/: tools.md
examples/: tools_demo.py
src/: main.py
tests/: test_cli_tools.py  test_main.py  test_tools.py
